--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/GrasshopperBears/kaifood/issues"
   },
-  "homepage": "https://github.com/GrasshopperBears/kaifood#readme"
+  "homepage": "https://github.com/GrasshopperBears/kaifood#readme",
+  "dependencies": {
+    "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.6"
+  }
 }
