server(chore): change to es6 - require문을 import문으로 변경 - arrow function 사용

--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,10 @@
   "name": "kaifood-server",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "start": "node --es-module-specifier-resolution=node ./bin/www.js",
+    "dev": "nodemon --es-module-specifier-resolution=node ./bin/www.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,9 +14,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "mongoose": "^5.12.3",
-    "morgan": "~1.9.1",
-    "mysql2": "^2.2.5",
-    "sequelize": "^6.6.2"
+    "mongoose": "^5.12.7",
+    "morgan": "~1.9.1"
   }
 }
