--- a/server/package.json
+++ b/server/package.json
@@ -4,17 +4,19 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node --es-module-specifier-resolution=node ./bin/www.js",
-    "dev": "nodemon --es-module-specifier-resolution=node ./bin/www.js"
+    "start": "cross-env NODE_ENV=production node --es-module-specifier-resolution=node ./bin/www.js",
+    "dev": "cross-env NODE_ENV=development nodemon --es-module-specifier-resolution=node ./bin/www.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cross-env": "^7.0.3",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.12.7",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "tunnel-ssh": "^4.1.4"
   }
 }
