--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
@@ -17,6 +18,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.12.7",
     "morgan": "~1.9.1",
+    "socket.io": "^4.0.1",
     "tunnel-ssh": "^4.1.4"
   }
 }
