client(feat): apply style - styled component, atnd 추가 - global style 적용 - alias 추가

--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@components/*": ["./src/components/*"],
+      "@layouts/*": ["./src/layouts/*"],
       "@pages/*": ["./src/pages/*"],
       "@routers/*": ["./src/routers/*"],
       "@services/*": ["./src/services/*"]
