client(feat): react-redux 추가 - reducer 및 action 추가 - reux provider 적용

--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -6,6 +6,9 @@
       "@layouts/*": ["./src/layouts/*"],
       "@pages/*": ["./src/pages/*"],
       "@routers/*": ["./src/routers/*"],
+      "@actions/*": ["./src/store/actions/*"],
+      "@reducers/*": ["./src/store/reducers/*"],
+      "@store/*": ["./src/store/*"],
       "@services/*": ["./src/services/*"]
     }
   }
