client(chore): firebase 추가 - 환경변수 설정 - gitignore에 추가 - config file alias 설정

--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -9,7 +9,8 @@
       "@actions/*": ["./src/store/actions/*"],
       "@reducers/*": ["./src/store/reducers/*"],
       "@store/*": ["./src/store/*"],
-      "@services/*": ["./src/services/*"]
+      "@services/*": ["./src/services/*"],
+      "app-firebase": ["./src/firebase-config.js"]
     }
   }
 }
