--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ node_modules
 .env.development.local
 .env.test.local
 .env.production.local
+firebase-config.js
 
 npm-debug.log*
 yarn-debug.log*
