--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,9 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.12.7",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "socket.io": "^4.0.1",
-    "tunnel-ssh": "^4.1.4"
+    "tunnel-ssh": "^4.1.4",
+    "uuid": "^8.3.2"
   }
 }
