client(feat): 메뉴 추가 기능 구현 - 이미지 리사이징을 위한 antd-img-crop library 추가 - form validator 설정 - 확인 클릭 시 form data 생성 후 서버로 api 요청

--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.15.5",
+    "antd-img-crop": "^3.14.1",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "firebase": "^8.6.0",
