client(chore): utils alias 추가

--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -10,6 +10,7 @@
       "@reducers/*": ["./src/store/reducers/*"],
       "@store/*": ["./src/store/*"],
       "@services/*": ["./src/services/*"],
+      "@utils/*": ["./src/utils/*"],
       "app-firebase": ["./src/firebase-config.js"]
     }
   }
