--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
+    "socket.io": "^4.1.2",
+    "socket.io-client": "^4.1.2",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.1"
   },
